--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.username = admin
 spring.datasource.password = admin
 
 spring.flyway.enabled=true
+spring.servlet.multipart.max-file-size=512MB
+spring.servlet.multipart.max-request-size=512MB
