reactivated foreign keys

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.jpa.database-platform=de.hskl.repominer.config.SqlDialect
 spring.jpa.hibernate.ddl-auto=none
 
-spring.datasource.url = jdbc:sqlite:database.db
-spring.lalalal=?foreign_keys=on
+spring.datasource.url = jdbc:sqlite:database.db?foreign_keys=on
 spring.datasource.driver-class-name = org.sqlite.JDBC
 
 spring.datasource.username = admin
