--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
-    "vuelidate": "^0.7.5"
+    "vuelidate": "^0.7.5",
+    "d3": "^6.6.2"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0"
