--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
     "vuelidate": "^0.7.5",
-    "d3": "^6.6.2"
+    "highcharts": "^9.0.1",
+    "highcharts-vue": "^1.3.5"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0"
