--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "quasar": "^1.0.0",
     "vuelidate": "^0.7.5",
     "highcharts": "^9.0.1",
-    "highcharts-vue": "^1.3.5"
+    "highcharts-vue": "^1.3.5",
+    "vuedraggable": "~2.24.3"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0"
